resolved #6
Implemented timeline size indicators, currently rendered in black
colour configureable through css.

found new bug #17
timeline positioning slightly overlaps screen when height set to 100%,
caused by space left for slider.

--- a/SSHD_log_vis/WebContent/css/timeline.css
+++ b/SSHD_log_vis/WebContent/css/timeline.css
@@ -3,13 +3,13 @@
 .controls {
 	position: absolute;
 	width: 24%;
-	height: 75%;
+	height:100%;
 }
 
-.timeline {
+.time {
 	position: absolute;
 	width: 75%;
-	height: 75%;
+	height: 100%;
 }
 
 .universe{
@@ -68,6 +68,9 @@
 	fill: #000000;
 	background-color: #000000;
 	stroke: #000000;
+}
+
+.timeline {
 }
 
 .indicator{
